# beastboys

./: .gitmodules  CMakeLists.txt  README.md
Common/: Logger.h
Examples/RawSockServer/: CMakeLists.txt  main.cpp
Examples/RestBinance/: CMakeLists.txt  main.cpp
Examples/WebSocketStreamer/: CMakeLists.txt  main.cpp
Internal/: beastboys.h
RawSocketApi/: RawMessenger.cpp  RawMessenger.h  RawStreamer.cpp  RawStreamer.h
RawSocketApi/Common/: RawSocketResponse.h
RawSocketApi/Impl/: RawConnector.cpp  RawConnector.h  RawReceiver.h  RawResolver.cpp  RawResolver.h  RawSender.h  RawSharedState.cpp  RawSharedState.h  RawSocketImpl.cpp  RawSocketImpl.h  RawStream.h
RestApi/Common/: NetworkRequestSettings.cpp  NetworkRequestSettings.h  NetworkTypes.h  RestApiResponse.cpp  RestApiResponse.h
RestApi/Impl/: BoostInternalImpl.cpp  BoostInternalImpl.h  ResponseHelper.cpp  ResponseHelper.h
Server/Common/: Client.cpp  Connection.h  Server.cpp  Server.h  ServerState.cpp  ServerState.h
Server/RawSocketServer/: RSConnection.cpp  RSConnection.h  RawDoorman.cpp  RawDoorman.h
Server/WebSocketServer/: HttpListener.cpp  HttpListener.h  WSConnection.cpp  WSConnection.h  WebSocketDoorman.cpp  WebSocketDoorman.h
Tests/: CMakeLists.txt  TestHelpers.cpp  main.cpp
Tests/cases/: raw_messaging.cpp  ws_connections.cpp
WebSocketApi/Impl/: Resolver.cpp  Resolver.h  Stream.h  WebsocketImpl.cpp
cmake/: beast_boys.cmake  generate_cacert_data.cmake
examples/RawSock/: CMakeLists.txt  main.cpp
examples/RawSockServer/: main.cpp
examples/RawSocketMessenger/: CMakeLists.txt  main.cpp
examples/RestBinance/: main.cpp
examples/WebSocketStreamer/: main.cpp
include/: beastboys
include/common/: CryptoHelper.h  ErrorHelper.h  Logger.h  cacert_data.h
include/internal/: beastboys.h
include/rawsocket/: RawMessenger.h  RawStreamer.h
include/rest/: RestApi.h
include/websocket/: Messenger.h  Streamer.h
src/common/: CryptoHelper.cpp
src/rawsocket/: RawMessenger.cpp  RawStreamer.cpp
tests/: TestHelpers.cpp  TestHelpers.h
(+66 files in other folders)
